# docs/openapi.yaml
@@ -56,6 +56,12 @@ components:
         created_at:
           type: string
           format: date-time
+        is_secret:
+          type: boolean
+          description: Flag to indicate if the chat is a secret chat
+        message_ttl:
+          type: integer
+          description: Time to live for messages in seconds
         last_message:
           $ref: '#/components/schemas/Message'
         unread_count:
@@ -217,6 +223,12 @@ components:
           items:
             type: string
             format: uuid
+        is_secret:
+          type: boolean
+          description: Flag to indicate if the chat is a secret chat
+        message_ttl:
+          type: integer
+          description: Time to live for messages in seconds
     UploadKeysRequest:
       type: object
       required:
